testdata/invalid_types/invalid_types.go
package foo

func Foo(v interface{}) {
	var s string
	s = v
}
